--- a/app/globals.css
+++ b/app/globals.css
@@ -10,9 +10,50 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+}
+.hamburger{
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  transition: all 0.25s;
+  position: relative;
 }
 
-@media (prefers-color-scheme: dark) {
+.hamburger-top, .hamburger-middle, .hamburger-bottom{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 2px;
+  background-color: #171717;
+  transform: rotate(0);
+  transition: all 0.5s;
+}
+.hamburger-middle{
+  transform: translateY(7px);
+}
+.hamburger-bottom{
+  transform: translateY(14px);
+}
+
+@theme{
+  /* --color-brightRed: hsl(12, 88%, 59%);
+  --color-brightRedLight: hsl(12, 88%, 69%);
+  --color-brightRedSupLight: hsl(12, 88%, 95%);
+  --color-darkBlue: hsl(228, 39%, 23%);
+  --color-darkGrayishBlue: hsl(227, 12%, 61%);
+  --color-veryDarkBlue: hsl(233, 12%, 13%);
+  --color-veryPaleRed: hsl(13, 100%, 96%);
+  --color-veryLightGray: hsl(0, 0%, 98%); */
+
+  /* --breakpoint-sm: 490px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 976px;
+  --breakpoint-xl: 1440px; */
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -23,4 +64,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
